# skilltrace

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  generation_manifest.json  pyproject.toml
compiler/: check_automation.py  check_mastery_eligibility.py  check_pass_eligibility.py  common.py  create_blocker.py  create_remediation.py  plan_session.py  recommend_next.py  record_work.py  run_release_tests.py  run_smoke_tests.py  schedule_review.py  show_blockers.py  show_evidence_status.py  show_home.py  show_node_detail.py  show_reviews.py  show_system_health.py  sqlite_export_all.py  suggest_remediation.py  suggest_reviews.py  sync_readiness.py  update_state.py  validate_evidence.py  validate_execution.py  validate_graph.py  validate_interface.py  validate_policy.py  validate_release.py
data/: skill_graph.db
docs/: AI_Learning_Roadmap_Revised_2026.docx  INSTALL.md  PRD.md  RELEASE_NOTES.md  RUNBOOK.md  curriculum-authoring.md  curriculum-verification-worksheet.md  skill-graph-5-pillar-framework.md  skill-graph-ai-learning-framework.md  skill-graph-architecture.md  skill-graph-compentency-based.md  skill-graph-framework.md  skill-graph-learning-framework.md  skill-graph-self-directed.md  skill-graph-system-design.md  skilltrace-application-roadmap.md
evidence/: artifact_specs.yaml  attempts.yaml  evidence_records.yaml  validation_gates.yaml
evidence_templates/: checklist_evidence_template.md  code_evidence_template.md  problem_set_evidence_template.md  technical_summary_template.md
examples/: example_session_command_flow.md  interface_command_registry.md  (+1 more)
(+337 files in other folders)
